--- a/package.json
+++ b/package.json
@@ -36,5 +36,12 @@
   "bugs": {
     "url": "https://github.com/julielin0812/okcupet/issues"
   },
-  "homepage": "https://github.com/julielin0812/okcupet#readme"
+  "homepage": "https://github.com/julielin0812/okcupet#readme",
+  "engines": {
+    "node": "6.10.1",
+    "npm": "3.10.10"
+  },
+  "scripts": {
+    "postinstall": "webpack"
+  }
 }
