--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "okcupet",
   "private": true,
   "dependencies": {
-    "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
@@ -17,6 +16,9 @@
     "webpack": "^3.6.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-jest": "^22.4.3",
+    "jest": "^22.4.3",
     "redux-logger": "^3.0.6"
   },
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
