--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "webpack",
-    "webpack": "webpack --watch"
+    "start": "webpack --watch",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
